// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScaleColumnHeaderRenderer /> should render correctly 1`] = `
<styled.div
  active={false}
  sortable={true}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <SortIcon
      filterDirection="asc"
      isFiltered={false}
      onClick={[MockFunction]}
    />
    <Flex
      align="center"
      marginLeft="1.25rem"
    >
      Label
      <div
        style={
          Object {
            "height": 14,
            "marginLeft": 7,
          }
        }
      >
        <FilterListIcon
          fill="#070707"
          height={14}
          onClick={[Function]}
          styles={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </div>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;

exports[`<ScaleColumnHeaderRenderer /> should render correctly when disableSort is true 1`] = `
<styled.div
  active={false}
  sortable={false}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <Flex
      align="center"
      marginLeft={false}
    >
      Label
      <div
        style={
          Object {
            "height": 14,
            "marginLeft": 7,
          }
        }
      >
        <FilterListIcon
          fill="#070707"
          height={14}
          onClick={[Function]}
          styles={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </div>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;

exports[`<ScaleColumnHeaderRenderer /> should render correctly when isFiltered is true 1`] = `
<styled.div
  active={true}
  sortable={true}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <SortIcon
      filterDirection="asc"
      isFiltered={true}
      onClick={[MockFunction]}
    />
    <Flex
      align="center"
      marginLeft="1.25rem"
    >
      Label
      <div
        style={
          Object {
            "height": 14,
            "marginLeft": 7,
          }
        }
      >
        <FilterListIcon
          fill="#070707"
          height={14}
          onClick={[Function]}
          styles={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </div>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;

exports[`<ScaleColumnHeaderRenderer /> should render correctly when sort isFiltered is true 1`] = `
<styled.div
  active={true}
  sortable={true}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <SortIcon
      filterDirection="asc"
      isFiltered={true}
      onClick={[MockFunction]}
    />
    <Flex
      align="center"
      marginLeft="1.25rem"
    >
      Label
      <div
        style={
          Object {
            "height": 14,
            "marginLeft": 7,
          }
        }
      >
        <FilterListIcon
          fill="#070707"
          height={14}
          onClick={[Function]}
          styles={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </div>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;
